packages/kit/test/apps/basics/src/routes/errors/load-status-without-error-server.svelte
<script context="module">
	/** @type {import('@dishuostec/kit').Load} */
	export async function load() {
		return { status: 401 };
	}
</script>
